--- a/style.css
+++ b/style.css
@@ -1,7 +1,35 @@
-p{
+.card {
+    width: 545px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightseagreen;
+}
+
+img {
+    margin: 0 auto;
+    width: 285px;
+    height: auto;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.texto, .imagem {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.texto p{
+    width: 180px;
+    height: 170px;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid black;
+    background-color: lightslategray;
+    border-radius: 10px;
+
     font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
-    margin: 20px;
+    text-align: center;    
 }
 
 body{
