--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,19 @@
 .card {
     width: 545px;
+    height: auto;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid black;
-    background-color: lightseagreen;
+    background-color: rgba(211, 211, 211, 0.671);
+    border-radius: 10px;
+}
+
+.titulo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    border: 10px solid rgb(15, 32, 49);
+    border-radius: 30px;
 }
 
 img {
@@ -33,5 +43,5 @@ img {
 }
 
 body{
-    background-color: lightslategray;
+    background-image: url(../img/fundo.png);
 }
